--- a/interface/index.html
+++ b/interface/index.html
@@ -26,6 +26,7 @@
     <script>
      // You can also require other files to run in this process
      require('./renderer.js')
+     require('./js/front.js');
     </script>
   </body>
 </html>
