display threat OK, need to remove click listener

--- a/interface/index.html
+++ b/interface/index.html
@@ -12,10 +12,10 @@
     <div id="map">
     </div>
 
-    <div id="status-info">
+    <div id="status-info" class="status-info">
       <div class="line _1">
 	<span class="text-info"> PROGRAM : SAMARITAIN </span>
-	<span id="loading-percent" class="text-info">45%</span>
+	<span id="loading-percent" class="text-info right-info">0%</span>
       </div>
       <div class="line _2">
 	<span class="text-info"> STATUS : LOADING DATA</span>
@@ -25,7 +25,7 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v0.41.0/mapbox-gl.js'></script>
     <script>
      // You can also require other files to run in this process
-     require('./renderer.js')
+     require('./renderer.js');
      require('./js/front.js');
     </script>
   </body>
