threat, cam and some useless code because insecam has only one geojson location for all Paris cameras

--- a/interface/index.html
+++ b/interface/index.html
@@ -5,7 +5,9 @@
     <title> Samaritain </title>
     <link href='https://api.mapbox.com/mapbox-gl-js/v0.41.0/mapbox-gl.css' rel='stylesheet' />
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link href='./css/main.css' rel='stylesheet' />
+
   </head>
   <body>
 
@@ -20,6 +22,10 @@
       <div class="line _2">
 	<span class="text-info"> STATUS : LOADING DATA</span>
       </div>
+    </div>
+
+    <div id="cam-view">
+      <i id="back-to-map" class="fa fa-angle-left" aria-hidden="true"></i>
     </div>
 
     <script src='https://api.mapbox.com/mapbox-gl-js/v0.41.0/mapbox-gl.js'></script>
